--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 		<!-- Parte de header-->
 		<header class="header">
 			<div class="header__content">
-				<a href="/index.html" class="header__logo logo">
+				<a href="index.html" class="header__logo logo">
 					<img
 						class="logo__image"
 						src="./assets/img/Logo.svg"
@@ -193,7 +193,7 @@
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="footer__card">
-					<a href="/index.html" class="footer__logo">
+					<a href="index.html" class="footer__logo">
 						<img src="./assets/img/Logo.svg" alt="Logo" />
 					</a>
 					<nav class="footer__menu">
@@ -249,6 +249,6 @@
 		<script
 			type="module"
 			src="./js/controllers/registro.controller.js"></script>
-		<script src="js/search-bar.js"></script>
+		<script src="./js/search-bar.js"></script>
 	</body>
 </html>
