--- a/new-products.html
+++ b/new-products.html
@@ -42,7 +42,7 @@
 		<!-- Parte de header-->
 		<header class="header">
 			<div class="header__content">
-				<a href="/index.html" class="header__logo logo">
+				<a href="index.html" class="header__logo logo">
 					<img
 						class="logo__image"
 						src="./assets/img/Logo.svg"
@@ -173,7 +173,7 @@
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="footer__card">
-					<a href="/index.html" class="footer__logo">
+					<a href="index.html" class="footer__logo">
 						<img src="./assets/img/Logo.svg" alt="Logo" />
 					</a>
 					<nav class="footer__menu">
@@ -219,7 +219,7 @@
 			</div>
 		</footer>
 		<!-- Script del documento JavaScript -->
-		<script type="module" src="js/login-button.js"></script>
+		<script type="module" src="./js/login-button.js"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"
 			integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ=="
@@ -229,6 +229,6 @@
 			type="module"
 			src="./js/controllers/new-product.controller.js"></script>
 		<script type="module" src="./js/load-image.js"></script>
-		<script src="js/search-bar.js"></script>
+		<script src="./js/search-bar.js"></script>
 	</body>
 </html>
