--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<!-- Parte de header-->
 		<header class="header">
 			<div class="header__content">
-				<a href="/index.html" class="header__logo logo">
+				<a href="index.html" class="header__logo logo">
 					<img
 						class="logo__image"
 						src="./assets/img/Logo.svg"
@@ -77,7 +77,7 @@
 		<section class="products">
 			<div class="products__content">
 				<h2 class="products__title">Star Wars</h2>
-				<a href="/products.html" class="products__link"
+				<a href="products.html" class="products__link"
 					>Ver todo <i class="fa-sharp fa-solid fa-arrow-right"></i
 				></a>
 				<div class="products__cards">
@@ -88,7 +88,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Vaso de Stormtrooper</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=1" class="product-card__link"
+						<a href="product-view.html?id=1" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -99,7 +99,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Darth Vader lego</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=2" class="product-card__link"
+						<a href="product-view.html?id=2" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -110,7 +110,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Figura de Yoda</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=3" class="product-card__link"
+						<a href="product-view.html?id=3" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -121,7 +121,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Figura de Stormtrooper</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=4" class="product-card__link"
+						<a href="product-view.html?id=4" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -132,7 +132,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Figura de bebe Yoda</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=5" class="product-card__link"
+						<a href="product-view.html?id=5" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -143,7 +143,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Disfraz de Kylo Ren</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=6" class="product-card__link"
+						<a href="product-view.html?id=6" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -154,7 +154,7 @@
 		<section class="products">
 			<div class="products__content">
 				<h2 class="products__title">Consolas</h2>
-				<a href="/products.html" class="products__link"
+				<a href="products.html" class="products__link"
 					>Ver todo <i class="fa-sharp fa-solid fa-arrow-right"></i
 				></a>
 				<div class="products__cards">
@@ -165,7 +165,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Control Xbox One</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=7" class="product-card__link"
+						<a href="product-view.html?id=7" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -176,7 +176,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Consola playstation 5</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=8" class="product-card__link"
+						<a href="product-view.html?id=8" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -187,7 +187,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Consola Nintendo NES</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=9" class="product-card__link"
+						<a href="product-view.html?id=9" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -198,7 +198,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Control Nintendo Switch</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=10" class="product-card__link"
+						<a href="product-view.html?id=10" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -209,7 +209,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Consola Xbox series X</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=11" class="product-card__link"
+						<a href="product-view.html?id=11" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -220,7 +220,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Consola Game Boy Color</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=12" class="product-card__link"
+						<a href="product-view.html?id=12" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -231,7 +231,7 @@
 		<section class="products">
 			<div class="products__content">
 				<h2 class="products__title">Diversos</h2>
-				<a href="/products.html" class="products__link"
+				<a href="products.html" class="products__link"
 					>Ver todo <i class="fa-sharp fa-solid fa-arrow-right"></i
 				></a>
 				<div class="products__cards">
@@ -242,7 +242,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Camisa logo Atari</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=13" class="product-card__link"
+						<a href="product-view.html?id=13" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -253,7 +253,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Camisa de Nintendo NES</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=14" class="product-card__link"
+						<a href="product-view.html?id=14" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -264,7 +264,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Figura de Sonic</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=15" class="product-card__link"
+						<a href="product-view.html?id=15" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -275,7 +275,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Articulo radio retro gamer</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=16" class="product-card__link"
+						<a href="product-view.html?id=16" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -286,7 +286,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Gafa de Oculus VR</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=17" class="product-card__link"
+						<a href="product-view.html?id=17" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -297,7 +297,7 @@
 							class="product-card__image" />
 						<p class="product-card__description">Disfraz de Pikachu</p>
 						<span class="product-card__price">$ 60,00</span>
-						<a href="/product-view.html?id=18" class="product-card__link"
+						<a href="product-view.html?id=18" class="product-card__link"
 							>Ver producto</a
 						>
 					</div>
@@ -308,7 +308,7 @@
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="footer__card">
-					<a href="/index.html" class="footer__logo">
+					<a href="index.html" class="footer__logo">
 						<img src="./assets/img/Logo.svg" alt="Logo" />
 					</a>
 					<nav class="footer__menu">
@@ -354,7 +354,7 @@
 			</div>
 		</footer>
 		<!-- Script del documento JavaScript -->
-		<script type="module" src="js/login-button.js"></script>
-		<script src="js/search-bar.js"></script>
+		<script type="module" src="./js/login-button.js"></script>
+		<script src="./js/search-bar.js"></script>
 	</body>
 </html>
