--- a/product-view.html
+++ b/product-view.html
@@ -40,7 +40,7 @@
 		<!-- Parte de header-->
 		<header class="header">
 			<div class="header__content">
-				<a href="/index.html" class="header__logo logo">
+				<a href="index.html" class="header__logo logo">
 					<img
 						class="logo__image"
 						src="./assets/img/Logo.svg"
@@ -91,7 +91,7 @@
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="footer__card">
-					<a href="/index.html" class="footer__logo">
+					<a href="index.html" class="footer__logo">
 						<img src="./assets/img/Logo.svg" alt="Logo" />
 					</a>
 					<nav class="footer__menu">
@@ -137,9 +137,9 @@
 			</div>
 		</footer>
 		<!-- Script del documento JavaScript -->
-		<script type="module" src="js/login-button.js"></script>
+		<script type="module" src="./js/login-button.js"></script>
 		<script
 			type="module"
-			src="js/controllers/product.view.controller.js"></script>
+			src="./js/controllers/product.view.controller.js"></script>
 	</body>
 </html>
