--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
 		<!-- Parte de header-->
 		<header class="header">
 			<div class="header__content">
-				<a href="/index.html" class="header__logo logo">
+				<a href="index.html" class="header__logo logo">
 					<img
 						class="logo__image"
 						src="./assets/img/Logo.svg"
@@ -66,7 +66,7 @@
 		<section class="all-products">
 			<div class="all-products__content">
 				<h2 class="products__title">Todos los produtos</h2>
-				<a href="/new-products.html" class="all-products__link block"
+				<a href="new-products.html" class="all-products__link block"
 					>Agregar producto</a
 				>
 				<div class="all-products__cards" data-content-products></div>
@@ -77,7 +77,7 @@
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="footer__card">
-					<a href="/index.html" class="footer__logo">
+					<a href="index.html" class="footer__logo">
 						<img src="./assets/img/Logo.svg" alt="Logo" />
 					</a>
 					<nav class="footer__menu">
@@ -123,6 +123,8 @@
 			</div>
 		</footer>
 		<!-- Script del documento JavaScript -->
-		<script type="module" src="js/controllers/products.controller.js"></script>
+		<script
+			type="module"
+			src="./js/controllers/products.controller.js"></script>
 	</body>
 </html>
